--- a/kompose-deployment-ingress/app3-ingress.yaml
+++ b/kompose-deployment-ingress/app3-ingress.yaml
@@ -2,12 +2,12 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   annotations:
-    kompose.cmd: kompose convert --out kompose-deployment/ --controller deployment --replicas 2
+    kompose.cmd: kompose convert --out kompose-deployment-ingress/ --controller deployment --replicas 2
     kompose.service.expose: nodejs-example-app.zer0.hu
     kompose.version: 1.32.0 (HEAD)
   labels:
-    io.kompose.service: app
-  name: app
+    io.kompose.service: app3
+  name: app3
 spec:
   rules:
     - host: nodejs-example-app.zer0.hu
@@ -15,7 +15,7 @@ spec:
         paths:
           - backend:
               service:
-                name: app
+                name: app3
                 port:
                   number: 3000
             path: /
