--- a/kompose-deployment-ingress/kustomization.yaml
+++ b/kompose-deployment-ingress/kustomization.yaml
@@ -1,4 +1,4 @@
 resources:
-  - app-deployment.yaml
-  - app-service.yaml
-  - app-ingress.yaml
+  - app3-deployment.yaml
+  - app3-service.yaml
+  - app3-ingress.yaml
