--- a/kompose-deployment/app2-deployment.yaml
+++ b/kompose-deployment/app2-deployment.yaml
@@ -5,13 +5,13 @@ metadata:
     kompose.cmd: kompose convert --out kompose-deployment/ --controller deployment --replicas 2
     kompose.version: 1.32.0 (HEAD)
   labels:
-    io.kompose.service: app
-  name: app
+    io.kompose.service: app2
+  name: app2
 spec:
   replicas: 2
   selector:
     matchLabels:
-      io.kompose.service: app
+      io.kompose.service: app2
   template:
     metadata:
       annotations:
@@ -19,7 +19,7 @@ spec:
         kompose.version: 1.32.0 (HEAD)
       labels:
         io.kompose.network/nodejs-example-app-default: "true"
-        io.kompose.service: app
+        io.kompose.service: app2
     spec:
       containers:
         - args:
@@ -32,9 +32,9 @@ spec:
             - name: AUTH_TOKEN
               value: t0k3n
           image: zerosuxx/nodejs-example-app:0.1.0
-          name: app
+          name: app2
           ports:
             - containerPort: 3000
               hostPort: 3000
               protocol: TCP
-      restartPolicy: OnFailure
+      restartPolicy: Always
