--- a/kompose-deployment/app2-service.yaml
+++ b/kompose-deployment/app2-service.yaml
@@ -3,15 +3,14 @@ kind: Service
 metadata:
   annotations:
     kompose.cmd: kompose convert --out kompose-deployment/ --controller deployment --replicas 2
-    kompose.service.expose: nodejs-example-app.zer0.hu
     kompose.version: 1.32.0 (HEAD)
   labels:
-    io.kompose.service: app
-  name: app
+    io.kompose.service: app2
+  name: app2
 spec:
   ports:
     - name: "3000"
       port: 3000
       targetPort: 3000
   selector:
-    io.kompose.service: app
+    io.kompose.service: app2
