--- a/kompose-deployment-ingress/app3-ingress.yaml
+++ b/kompose-deployment-ingress/app3-ingress.yaml
@@ -4,12 +4,13 @@ metadata:
   annotations:
     kompose.cmd: kompose convert --out kompose-deployment-ingress/ --controller deployment --replicas 2
     kompose.service.expose: nodejs-example-app.zer0.hu
+    kompose.service.expose.ingress-class-name: nginx
     kompose.version: 1.32.0 (HEAD)
-    nginx.ingress.kubernetes.io/ssl-redirect: "false"
   labels:
     io.kompose.service: app3
   name: app3
 spec:
+  ingressClassName: nginx
   rules:
     - host: nodejs-example-app.zer0.hu
       http:
