--- a/1-kompose-pod/app-pod-pod.yaml
+++ b/1-kompose-pod/app-pod-pod.yaml
@@ -2,12 +2,12 @@ apiVersion: v1
 kind: Pod
 metadata:
   annotations:
-    kompose.cmd: kompose convert --out kompose-pod/
-    kompose.version: 1.32.0 (HEAD)
+    kompose.cmd: kompose convert -f docker-compose.yaml --out 1-kompose-pod
+    kompose.version: 1.32.0 (765fde254)
   labels:
     io.kompose.network/nodejs-example-app-default: "true"
-    io.kompose.service: app
-  name: app
+    io.kompose.service: app-pod
+  name: app-pod
 spec:
   containers:
     - args:
@@ -20,9 +20,5 @@ spec:
         - name: AUTH_TOKEN
           value: t0k3n
       image: zerosuxx/nodejs-example-app:0.1.0
-      name: app
-      ports:
-        - containerPort: 3000
-          hostPort: 3000
-          protocol: TCP
+      name: app-pod
   restartPolicy: OnFailure
