--- a/3-kompose-ingress/app-deployment-deployment.yaml
+++ b/3-kompose-ingress/app-deployment-deployment.yaml
@@ -2,28 +2,30 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   annotations:
-    kompose.cmd: kompose convert --out kompose-deployment-ingress/ --controller deployment --replicas 2
+    kompose.cmd: kompose convert -f docker-compose-ingress.yaml --replicas 2 --out 3-kompose-ingress
     kompose.service.expose: nodejs-example-app.zer0.hu
     kompose.service.expose.ingress-class-name: nginx
-    kompose.version: 1.32.0 (HEAD)
+    kompose.version: 1.32.0 (765fde254)
+    nginx.ingress.kubernetes.io/ssl-redirect: "false"
   labels:
-    io.kompose.service: app3
-  name: app3
+    io.kompose.service: app-deployment
+  name: app-deployment
 spec:
   replicas: 2
   selector:
     matchLabels:
-      io.kompose.service: app3
+      io.kompose.service: app-deployment
   template:
     metadata:
       annotations:
-        kompose.cmd: kompose convert --out kompose-deployment-ingress/ --controller deployment --replicas 2
+        kompose.cmd: kompose convert -f docker-compose-ingress.yaml --replicas 2 --out 3-kompose-ingress
         kompose.service.expose: nodejs-example-app.zer0.hu
         kompose.service.expose.ingress-class-name: nginx
-        kompose.version: 1.32.0 (HEAD)
+        kompose.version: 1.32.0 (765fde254)
+        nginx.ingress.kubernetes.io/ssl-redirect: "false"
       labels:
         io.kompose.network/nodejs-example-app-default: "true"
-        io.kompose.service: app3
+        io.kompose.service: app-deployment
     spec:
       containers:
         - args:
@@ -36,7 +38,7 @@ spec:
             - name: AUTH_TOKEN
               value: t0k3n
           image: zerosuxx/nodejs-example-app:0.1.0
-          name: app3
+          name: app-deployment
           ports:
             - containerPort: 3000
               hostPort: 3000
