feat: add app ingress

--- a/3-kompose-ingress/app-ingress-deployment.yaml
+++ b/3-kompose-ingress/app-ingress-deployment.yaml
@@ -2,30 +2,30 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   annotations:
-    kompose.cmd: kompose convert -f docker-compose-ingress.yaml --replicas 2 --out 3-kompose-ingress
+    kompose.cmd: kompose convert --file /src/docker-compose-ingress.yaml --out 3-kompose-ingress --replicas 2
     kompose.service.expose: nodejs-example-app.zer0.hu
     kompose.service.expose.ingress-class-name: nginx
-    kompose.version: 1.32.0 (765fde254)
+    kompose.version: 1.32.0 (HEAD)
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
   labels:
-    io.kompose.service: app-deployment
-  name: app-deployment
+    io.kompose.service: app-ingress
+  name: app-ingress
 spec:
   replicas: 2
   selector:
     matchLabels:
-      io.kompose.service: app-deployment
+      io.kompose.service: app-ingress
   template:
     metadata:
       annotations:
-        kompose.cmd: kompose convert -f docker-compose-ingress.yaml --replicas 2 --out 3-kompose-ingress
+        kompose.cmd: kompose convert --file /src/docker-compose-ingress.yaml --out 3-kompose-ingress --replicas 2
         kompose.service.expose: nodejs-example-app.zer0.hu
         kompose.service.expose.ingress-class-name: nginx
-        kompose.version: 1.32.0 (765fde254)
+        kompose.version: 1.32.0 (HEAD)
         nginx.ingress.kubernetes.io/ssl-redirect: "false"
       labels:
-        io.kompose.network/nodejs-example-app-default: "true"
-        io.kompose.service: app-deployment
+        io.kompose.network/src-default: "true"
+        io.kompose.service: app-ingress
     spec:
       containers:
         - args:
@@ -38,7 +38,7 @@ spec:
             - name: AUTH_TOKEN
               value: t0k3n
           image: zerosuxx/nodejs-example-app:0.1.0
-          name: app-deployment
+          name: app-ingress
           ports:
             - containerPort: 3000
               hostPort: 3000
