--- a/3-kompose-ingress/app-ingress-ingress.yaml
+++ b/3-kompose-ingress/app-ingress-ingress.yaml
@@ -2,14 +2,14 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   annotations:
-    kompose.cmd: kompose convert -f docker-compose-ingress.yaml --replicas 2 --out 3-kompose-ingress
+    kompose.cmd: kompose convert --file /src/docker-compose-ingress.yaml --out 3-kompose-ingress --replicas 2
     kompose.service.expose: nodejs-example-app.zer0.hu
     kompose.service.expose.ingress-class-name: nginx
-    kompose.version: 1.32.0 (765fde254)
+    kompose.version: 1.32.0 (HEAD)
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
   labels:
-    io.kompose.service: app-deployment
-  name: app-deployment
+    io.kompose.service: app-ingress
+  name: app-ingress
 spec:
   ingressClassName: nginx
   rules:
@@ -18,7 +18,7 @@ spec:
         paths:
           - backend:
               service:
-                name: app-deployment
+                name: app-ingress
                 port:
                   number: 3000
             path: /
